--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
 </head>
 <body>
+	<label for="height">Height:</label>
+	<input type="number" id="height" name="height">
+
+	<label for="width">Width: </label>
+	<input type="number" id="width" name="width">
 
 	<div>
 		<input id="imageFile" type="file" name="demoImage" onchange="showPreview()" />
