--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 
 </head>
 <body>
-
+	
 	<label for="width">Width: </label>
-	<input type="number" id="width" name="width">
-
+	<input type="number" id="width" name="width" value="0">
+	
+	<label for="height">Height: </label>
+	<input type="number" id="height" name="height" value="0">
+	
 	<div>
 		<input id="imageFile" type="file" name="demoImage" onchange="showPreview()" />
 		Original:
